objects/LLC_BI__DocuSign_Envelope__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Attachment_Id__c</fullName>
        <description>A reference to the attachment that was downloaded from DocuSign.</description>
        <label>Attachment Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Envelope_Id__c</fullName>
        <description>The DocuSign assigned envelope ID associated with the document.  For example &apos;cfd82621-5a7d-4d84-acdb-9b5ec2cfa9da&apos;. This value uniquely identifies a document at DocuSign.</description>
        <label>Envelope_Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Object_Id__c</fullName>
        <description>The SalesForce ID of the sObject that is associated with the envelope. This is not a lookup field and can reference an object of any type.</description>
        <label>Object Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Related_Object_Id__c</fullName>
        <description>The SalesForce ID of the Related sObject that is associated with the envelope. This is not a lookup field and can reference an object of any type.</description>
        <label>Related Object Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>The DocuSign assigned Status of the document.

Example values:
- &apos;Created&apos;
- &apos;Deleted&apos;
- &apos;Sent&apos;
- &apos;Delivered&apos;
- &apos;Signed&apos;
- &apos;Completed&apos;
- &apos;Declined&apos;
- &apos;Voided&apos;
- &apos;TimedOut&apos;</description>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The SalesForce ID of the template that was used to generate the envelope.</description>
        <label>Template</label>
        <referenceTo>LLC_BI__DocuSign_Template__c</referenceTo>
        <relationshipLabel>DocuSign Envelopes</relationshipLabel>
        <relationshipName>DocuSignEnvelopes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>DocuSign Envelope</label>
    <nameField>
        <label>DocuSignEnvelope Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign_Envelopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>